...
                borderWidth: 1,
                borderRadius: 60,
                height: 46,
                paddingVertical: 0,
              }}
            >
              Retry
            </PrimaryButton>
          ) : (
            <PrimaryButton
              onPress={handleFetchCode}
              disabled={isLoading}
              fontSize={16}
...
