...

  return (
    <YStack
      backgroundColor={'#F8FAFC'}
      flex={1}
      alignItems="center"
      accessibilityLabel="home-screen-root"
      collapsable={false}
      testID="home-screen-root"
    >
      <ScrollView
        showsVerticalScrollIndicator={false}
        flex={1}
...
