...
        }
        onScroll={handleScroll}
        scrollViewRef={scrollViewRef}
        onContentSizeChange={handleContentSizeChange}
        onLayout={handleScrollViewLayout}
        initialScrollOffset={initialScrollOffset}
        testID="prove-screen-card"
      >
        {/* Disclosure Items */}
        <YStack marginTop={0}>
          {disclosureItems.map((item, index) => (
            <DisclosureItem
              key={item.key}
...
        onVerify={onVerify}
        selectedAppSessionId={selectedApp?.sessionId}
        hasScrolledToBottom={hasScrolledToBottom}
        isScrollable={isScrollable}
        isReadyToProve={isReadyToProve}
        isDocumentExpired={isDocumentExpired}
        testID="prove-screen-verify-bar"
        hasCheckedForInactiveDocument={hasCheckedForInactiveDocument}
      />

      {formattedUserId && selectedApp?.userId && (
        <WalletAddressModal
          visible={walletModalOpen}
...
