...
      return <LoadingContent text="Parsing passport data" />;
    }
    if (state.matches('preparing3')) {
      return <LoadingContent text="Preparing for verification" />;
    }
    if (state.matches('ready')) {
      return 'Press and hold to verify';
    }
    if (state.matches('verifying')) {
      return <LoadingContent text="Generating proof" />;
    }
    return null;
  };
...
